# universal-covering-problem-bs0832-reproduction

./: .gitignore  ARTIFACTS.md  CERTIFICATE.md  CITATION.cff  EXPECTED_OUTPUTS.md  LICENSE  README.md  README.zh-CN.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: verify.yml
app/: __init__.py
app/domain/: __init__.py  adaptive_global_v106.py  adaptive_global_v107.py  adaptive_global_v108.py  adaptive_global_v109.py  certificate_checks.py  final_verifier.py  io_utils.py  manifest.py  signoff.py  stage_common.py  stage_v106.py  stage_v107.py  stage_v108.py  stage_v109.py
certificate/: MANIFEST.json  SHA256SUMS.txt  reviewer_signoff_v109.json
certificate/manifest/: CHECKSUM.md
certificate/public/: CERTIFICATE_INDEX.md
docs/: artifact_policy.md  artifact_structure.md  claim_scope.md  data_dictionary.md  expected_outputs.md  faq.md  reproducibility.md  verification_design.md
scripts/: __init__.py  _bootstrap.py  _logging.py  check_repository.py  replay_certificate_chain.py  replay_construction_audit.py  replay_final_adjudication.py  replay_per_record_evidence.py  replay_witness_construction.py  run_all_stages.py  run_final_verification.ps1  run_final_verification.py  run_stage_v106.py  run_stage_v107.py  run_stage_v108.py  run_stage_v109.py  run_windows.ps1  verify_certificate.py
tests/: test_certificate_validation.py  test_cli_help.py  test_markdown_math.py  test_narrative_lint.py
ucbs/certificate/: chain_replay.py  construction_audit.py  final_adjudication.py  per_record_evidence.py  validation.py  witness_construction.py
ucbs/cli/: __init__.py  check_repository.py  common.py  output.py  replay_certificate_chain.py  replay_construction_audit.py  replay_final_adjudication.py  (+3 more)
(+5 files in other folders)
